# planet-dump-ng

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac
aclocal/: ax_boost_iostreams.m4  ax_boost_thread.m4
include/: changeset_filter.hpp  changeset_map.hpp  copy_elements.hpp  delta.hpp  dump_archive.hpp  dump_reader.hpp  extract_kv.hpp  history_filter.hpp  insert_kv.hpp  output_writer.hpp  pbf_writer.hpp  table_extractor.hpp  time_epoch.hpp  types.hpp  unescape_copy_row.hpp  writer_common.hpp  xml_writer.hpp
script/: emacs-format-file.el  fmt.sh
src/: Makefile.am  changeset_filter.cpp  changeset_map.cpp  copy_elements.cpp  dump_archive.cpp  dump_reader.cpp  extract_kv.cpp  history_filter.cpp  insert_kv.cpp  output_writer.cpp  pbf_writer.cpp  planet-dump.cpp  time_epoch.cpp  types.cpp  xml_writer.cpp
test/: bad-character.dmp  empty.dmp  liechtenstein-2013-08-03.dmp  long-changeset-comment.dmp  test-case-runner.sh
test/changesets-badchar.xml.case/: changesets.osm.bz2  cmd.sh
test/changesets-empty.xml.case/: changesets.osm.bz2  cmd.sh
test/changesets.xml.case/: changesets-clean.osm.bz2  changesets.osm.bz2  cmd.sh
test/discussions-badchar.xml.case/: cmd.sh  discussions.osm.bz2
test/discussions-long-comment.xml.case/: cmd.sh  discussions.osm.bz2
test/discussions.xml.case/: cmd.sh  discussions-no-userinfo.osm.bz2  discussions.osm.bz2
test/history.pbf.case/: cmd.sh  history-no-userinfo.osm.pbf  history.osm.pbf
test/history.xml.case/: cmd.sh  history-no-userinfo.osm.bz2  history.osm.bz2  history.osm.pbf
test/planet.pbf.case/: cmd.sh  planet-no-userinfo.osm.pbf  planet.osm.pbf
test/planet.xml.case/: cmd.sh  planet-no-userinfo.osm.bz2  planet.osm.bz2  planet.osm.pbf
